--- a/login-flat/src/style.css
+++ b/login-flat/src/style.css
@@ -50,11 +50,13 @@ body{
     color: white;
     background-color: #2c3e50;
     outline: none;
+    cursor: pointer;
 }
 #close{
     position: absolute;
     top: 20px;
     right: 20px;
+    cursor: pointer;
 }
 .show-hide{
     left: 0;
@@ -66,5 +68,6 @@ body{
     position: absolute;
     left: 50%;
     top: 50%;
+    cursor: pointer;
     transform: translate(-50%, -50%);
 }
